fix(selection): Preserve move order
Keep insertion order through selection expansion so dependent blocks are placed and updated deterministically.